Prettified all files

--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
   <head>
     <!-- Don't worry about this meta stuff yet, it's not essential to know yet :) -->
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
 
     <title>React Handpan Project</title>
   </head>
