--- a/index.html
+++ b/index.html
@@ -16,5 +16,5 @@
   <!-- Here we're telling the browser to source the code found at build/bundle.js -->
   <!-- We do it after the actual HTML so that we know the browser already knows -->
   <!-- about the <div> with the id of "root", which we need for our app -->
-  <script src="build/bundle.js"></script>
+  <script src="./build/bundle.js"></script>
 </html>
