--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
 
-    <title>React Handpan Project</title>
+    <title>Handpan Sequencer</title>
   </head>
   <body>
     <div id="root"></div>
